--- a/designers.html
+++ b/designers.html
@@ -110,7 +110,7 @@
         </div>
 
         <div class="card1">
-            <a href="designers/bruno monguzzi.html"> <img src="immagini/designer/monguzzi.png" alt=""> </a>
+            <a href="designers/monguzzi.html"> <img src="immagini/designer/monguzzi.png" alt=""> </a>
             <h3>Bruno Monguzzi</h3>
         </div>
 
