--- a/projects.html
+++ b/projects.html
@@ -89,6 +89,21 @@
             <p> <strong>Photograpy italiana</strong><br>Giancarlo Lliprandi, 1970 <br>Copertina</p> 
         </div>
 
+        <div class="categoria categoria-1 card">
+            <a href="../progetti/noorda6.html"> <img src="../immagini/noorda/noorda6.jpeg" alt=""> </a>
+            <p> <strong>Lisi</strong><br>Bob Noorda, 1967 <br>Copertina</p>
+        </div>
+
+        <div class="categoria categoria-1 card">
+            <a href="../progetti/mari1.html"> <img src="../immagini/mari/mari1.png" alt=""> </a>
+            <p> <strong>Arte Programmata</strong><br>Enzo Mari, 1962 <br>Copertina </p>
+        </div>
+
+        <div class="categoria categoria-1 card">
+            <a href="../progetti/monguzzi4.html"> <img src="../immagini/monguzzi/monguzzi4.png" alt=""> </a>
+            <p> <strong>Alice edizioni</strong><br>Bruno Monguzzi, 1987 <br>Libro </p>
+        </div>
+
 
 
         <!--Advertising-->
@@ -228,6 +243,44 @@
             <p> <strong>La rinascente</strong><br>Giancarlo Lliprandi, 1964 <br>Poster </p> 
         </div>
 
+        <div class="categoria categoria-3 card">
+            <a href="../progetti/mari2.html"> <img src="../immagini/mari/mari2.avif" alt=""> </a>
+            <p> <strong>Danese</strong><br>Enzo Mari, 1957 <br>Poster </p>
+        </div>
+
+        <div class="categoria categoria-3 card">
+            <a href="../progetti/monguzzi1.html"> <img src="../immagini/monguzzi/monguzzi1.webp" alt=""> </a>
+            <p> <strong>Museo di Lugano</strong><br>Bruno Monguzzi, 1992 <br>Poster </p>
+        </div>
+
+        <div class="categoria categoria-3 card">
+            <a href="../progetti/monguzzi2.html"> <img src="../immagini/monguzzi/monguzzi2.webp" alt=""> </a>
+            <p> <strong>Fragile</strong><br>Bruno Monguzzi, 1997 <br>Poster </p>
+        </div>
+
+        <div class="categoria categoria-3 card">
+            <a href="../progetti/monguzzi3.html"> <img src="../immagini/monguzzi/monguzzi3.jpg" alt=""> </a>
+            <p> <strong>Ferrari Simposium</strong><br>Bruno Monguzzi, 1996 <br>Poster </p>
+        </div>
+
+        <div class="categoria categoria-3 card">
+            <a href="../progetti/monguzzi5.html"> <img src="../immagini/monguzzi/monguzzi5.jpg" alt=""> </a>
+            <p> <strong>Cinquant'anni di carta</strong><br>Bruno Monguzzi 1961 <br>Poster </p>
+        </div>
+
+        <div class="categoria categoria-3 card">
+            <a href="../progetti/nizzoli1.html"> <img src="../immagini/nizzoli/nizzoli2.jpg" alt=""> </a>
+            <p> <strong>Campari</strong><br>Marcello Nizzoli, 1927 <br>Poster </p>
+        </div>
+
+        <div class="categoria categoria-3 card">
+            <a href="../progetti/nizzoli2.html"> <img src="../immagini/nizzoli/nizzoli1.png" alt=""> </a>
+            <p> <strong>Bernocchi</strong><br>Marcello Nizzoli, 1930 <br>Poster </p>
+        </div>
+
+
+        
+
        
         <!--Marchi-->
         <div class="categoria categoria-4 card">
@@ -244,6 +297,32 @@
             <a href="progetti/grignani2.html"> <img src="immagini/grignani/grignani2.jpg" alt=""> </a>
                 <p> <strong>Pura Lana Vergine</strong><br>Franco Grignani, 1964 <br>Marchio </p>
         </div>
+
+        <div class="categoria categoria-4 card">
+            <a href="../progetti/noorda1.html"> <img src="../immagini/noorda/noorda1.png" alt=""> </a>
+            <p> <strong>Metro di Milano</strong><br>Bob Noorda, 1963 <br>Marchio </p>
+        </div>
+
+        <div class="categoria categoria-4 card">
+            <a href="../progetti/noorda2.html"> <img src="../immagini/noorda/noorda2.webp" alt=""> </a>
+            <p> <strong>Agip</strong><br>Bob Noorda, 1972 <br>Marchio </p>
+        </div>
+
+        <div class="categoria categoria-4 card">
+            <a href="../progetti/noorda3.html"> <img src="../immagini/noorda/noorda3.png" alt=""> </a>
+            <p> <strong>Regione Lombardia</strong><br>Bob Noorda, 1974 <br>Marchio </p>
+        </div>
+
+        <div class="categoria categoria-4 card">
+            <a href="../progetti/noorda4.html"> <img src="../immagini/noorda/noorda4.jpeg" alt=""> </a>
+            <p> <strong>Feltrinelli</strong><br>Bob Noorda, 1981 <br>Marchio </p>
+        </div>
+
+        <div class="categoria categoria-4 card">
+            <a href="../progetti/noorda5.html"> <img src="../immagini/noorda/noorda5.png" alt=""> </a>
+            <p> <strong>Biennale di Venezia</strong><br>Bob Noorda, 1966 <br>Marchio </p>
+        </div>
+
 </div>
 </section>
 
