--- a/designers/lamm.html
+++ b/designers/lamm.html
@@ -43,22 +43,22 @@
             
             <div class="card">
                 <a href="../progetti/lamm1.html"> <img src="../immagini/lamm/1.jpg" alt=""> </a>
-                <p> <strong>For a cleaner Napoli</strong><br>Armando Milani, 1985 <br>Poster </p>
+                <p> <strong>Giocattoli</strong><br>Lora Lamm, 1960 <br>Poster </p>
             </div>
 
             <div class="card">
                 <a href="../progetti/lamm2.html"> <img src="../immagini/lamm/2.jpg" alt=""> </a>
-                <p> <strong>Translating war into peace</strong><br>Armandi Milani, 2003 <br>Poster </p>
+                <p> <strong>Natale laRinascente</strong><br>Lora Lamm, 1957 <br>Poster </p>
             </div>
 
             <div class="card">
                 <a href="../progetti/lamm3.html"> <img src="../immagini/lamm/3.jpg" alt=""> </a>
-                <p> <strong>Cineclub Brera </strong><br>Armando Milani, 1973 <br>Poster </p>
+                <p> <strong>L'Uomo </strong><br>Lora Lamm, 1963 <br>Poster </p>
             </div>
 
             <div class="card">
                 <a href="../progetti/lamm4.html"> <img src="../immagini/lamm/4.jpg" alt=""> </a>
-                <p> <strong>Festival de Jazz Montreaux </strong><br>Armando Milani, 1967 <br>Poster </p>
+                <p> <strong>La moda si diffonde </strong><br>Lora Lamm, 1960 <br>Poster </p>
             </div>
             
         </div>
