--- a/progetti/milani5.html
+++ b/progetti/milani5.html
@@ -57,9 +57,10 @@
                 <a href="milani4.html"> <img src="../immagini/milani/1967-festival-jazz.jpeg" alt=""> </a> <!-- MODIFICARE -->
                 <p> <strong>Festival de Jazz Montreaux</strong><br>Armando Milani, 1967 <br>Poster </p> <!-- MODIFICARE -->
             </div>
+            
             <div class="card">
-                <a href="milani5.html"> <img src="../immagini/milani/1972-euromar_k.jpeg" alt=""> </a> <!-- MODIFICARE -->
-                <p> <strong>Euromar</strong><br>Armando Milani, 1972 <br>Poster </p> <!-- MODIFICARE -->
+                <a href="milani6.html"> <img src="../immagini/milani/1973-edizioni-depadova_k.jpeg" alt=""> </a> <!-- MODIFICARE -->
+                <p> <strong>Edizioni DePadova</strong><br>Armando Milani, 1973 <br>Marchio </p> <!-- MODIFICARE -->
             </div>
         </div>
     </section>
