--- a/projects.html
+++ b/projects.html
@@ -239,37 +239,37 @@
         </div>
 
         <div class="categoria categoria-3 card">
-            <a href="../progetti/mari2.html"> <img src="../immagini/mari/mari2.avif" alt=""> </a>
+            <a href="progetti/mari2.html"> <img src="immagini/mari/mari2.avif" alt=""> </a>
             <p> <strong>Danese</strong><br>Enzo Mari, 1957 <br>Poster </p>
         </div>
 
         <div class="categoria categoria-3 card">
-            <a href="../progetti/monguzzi1.html"> <img src="../immagini/monguzzi/monguzzi1.webp" alt=""> </a>
+            <a href="progetti/monguzzi1.html"> <img src="immagini/monguzzi/monguzzi1.webp" alt=""> </a>
             <p> <strong>Museo di Lugano</strong><br>Bruno Monguzzi, 1992 <br>Poster </p>
         </div>
 
         <div class="categoria categoria-3 card">
-            <a href="../progetti/monguzzi2.html"> <img src="../immagini/monguzzi/monguzzi2.webp" alt=""> </a>
+            <a href="progetti/monguzzi2.html"> <img src="immagini/monguzzi/monguzzi2.webp" alt=""> </a>
             <p> <strong>Fragile</strong><br>Bruno Monguzzi, 1997 <br>Poster </p>
         </div>
 
         <div class="categoria categoria-3 card">
-            <a href="../progetti/monguzzi3.html"> <img src="../immagini/monguzzi/monguzzi3.jpg" alt=""> </a>
+            <a href="progetti/monguzzi3.html"> <img src="immagini/monguzzi/monguzzi3.jpg" alt=""> </a>
             <p> <strong>Ferrari Simposium</strong><br>Bruno Monguzzi, 1996 <br>Poster </p>
         </div>
 
         <div class="categoria categoria-3 card">
-            <a href="../progetti/monguzzi5.html"> <img src="../immagini/monguzzi/monguzzi5.jpg" alt=""> </a>
+            <a href="progetti/monguzzi5.html"> <img src="immagini/monguzzi/monguzzi5.jpg" alt=""> </a>
             <p> <strong>Cinquant'anni di carta</strong><br>Bruno Monguzzi 1961 <br>Poster </p>
         </div>
 
         <div class="categoria categoria-3 card">
-            <a href="../progetti/nizzoli1.html"> <img src="../immagini/nizzoli/nizzoli2.jpg" alt=""> </a>
+            <a href="progetti/nizzoli1.html"> <img src="immagini/nizzoli/nizzoli2.jpg" alt=""> </a>
             <p> <strong>Campari</strong><br>Marcello Nizzoli, 1927 <br>Poster </p>
         </div>
 
         <div class="categoria categoria-3 card">
-            <a href="../progetti/nizzoli2.html"> <img src="../immagini/nizzoli/nizzoli1.png" alt=""> </a>
+            <a href="progetti/nizzoli2.html"> <img src="immagini/nizzoli/nizzoli1.png" alt=""> </a>
             <p> <strong>Bernocchi</strong><br>Marcello Nizzoli, 1930 <br>Poster </p>
         </div>
 
