--- a/progetti/schawinsky1.html
+++ b/progetti/schawinsky1.html
@@ -52,7 +52,7 @@
             </div>
             <div class="card">
                 <a href="schawinsky5.html"> <img src="../immagini/Schawinsky/5.jpg" alt=""> </a>
-                <p> <strong>La pubblicità</strong><br>Xanti Schawinsky, 1935 <br>Editoria </p>
+                <p> <strong>La pubblicità</strong><br>Xanti Schawinsky, 1935 <br>Poster </p>
             </div>
             <div class="card">
                 <a href="schawinsky6.html"> <img src="../immagini/Schawinsky/6.jpg" alt=""> </a>
