--- a/progetti/schawinsky3.html
+++ b/progetti/schawinsky3.html
@@ -44,7 +44,7 @@
             </div>
             <div class="card">
                 <a href="schawinsky2.html"> <img src="../immagini/Schawinsky/2.jpg" alt=""> </a>
-                <p> <strong>Olivetti M40</strong><br>Xanti Schawinsky, 1934 <br>Editoria </p>
+                <p> <strong>Olivetti M40</strong><br>Xanti Schawinsky, 1934 <br>Poster </p>
             </div>
             <div class="card">
                 <a href="schawinsky4.html"> <img src="../immagini/Schawinsky/4.jpg" alt=""> </a>
