--- a/projects.html
+++ b/projects.html
@@ -135,6 +135,10 @@
             <p> <strong>Vitaplex</strong><br>Carlo Vivarelli, 1946 <br>Copertina </p>
         </div>
 
+        <div class="categoria categoria-1 card">
+            <a href="progetti/schawinsky5.html"> <img src="immagini/Schawinsky/5.jpg" alt=""> </a>
+            <p> <strong>La pubblicità</strong><br>Xanti Schawinsky, 1934 <br>Copertina </p>
+        </div>
         <!--Advertising-->
 
         
@@ -389,6 +393,31 @@
             <p> <strong>Guaiacalcium Efedrina </strong><br>Franco Grignani, 1953 <br>Advertising</p> 
         </div>
        
+        <div class="categoria categoria-3 card">
+            <a href="progetti/schawinsky1.html"> <img src="immagini/Schawinsky/1.jpg" alt=""> </a>
+            <p> <strong>La Rivista - Sì</strong><br>Xanti Schawisnky, 1934 <br>Poster </p>
+        </div>
+
+        <div class="categoria categoria-3 card">
+            <a href="progetti/schawinsky2.html"> <img src="immagini/Schawinsky/2.jpg" alt=""> </a>
+            <p> <strong>Olivetti M40</strong><br>Xanti Schawisnky, 1934 <br>Poster </p>
+        </div>
+
+        <div class="categoria categoria-3 card">
+            <a href="progetti/schawinsky3.html"> <img src="immagini/Schawinsky/3.jpg" alt=""> </a>
+            <p> <strong>Illy Caffé</strong><br>Xanti Schawisnky, 1934 <br>Poster </p>
+        </div>
+
+        <div class="categoria categoria-3 card">
+            <a href="progetti/schawinsky4.html"> <img src="immagini/Schawinsky/4.jpg" alt=""> </a>
+            <p> <strong>Princeps</strong><br>Xanti Schawisnky, 1934 <br>Poster </p>
+        </div>
+
+        <div class="categoria categoria-3 card">
+            <a href="progetti/schawinsky6.html"> <img src="immagini/Schawinsky/6.jpg" alt=""> </a>
+            <p> <strong>Olivetti MP\</strong><br>Xanti Schawisnky, 1932 <br>Poster </p>
+        </div>
+
         <!--Marchi-->
         <div class="categoria categoria-4 card">
             <a href="progetti/steiner6.html"> <img src="immagini/steiner/ORO.jpg" alt=""> </a>
@@ -439,6 +468,8 @@
             <a href="progetti/milani6.html"> <img src="immagini/milani/1973-edizioni-depadova_k.jpeg" alt=""> </a>
             <p> <strong>Edizioni DePadova</strong><br>Armando Milani, 1973 <br>Marchio </p>
         </div>
+
+
 </div>
 </section>
 
