--- a/designers/iliprandi.html
+++ b/designers/iliprandi.html
@@ -26,7 +26,7 @@
         <section class="hero-designer">
             <div class="flex">
                 <div class="testo">
-                    <h2>Giancarlo Lliprandi</h2>
+                    <h2>Giancarlo Iliprandi</h2>
                     <p>Giancarlo Iliprandi nasce a Milano il 15 marzo del 1925 ed è morto il 15 settembre 2016 a Milano all'età di 91 anni, è considerato uno dei maggiori grafici italiani
                         Suo padre commerciava in automobili.All'inizio si era iscritto alla Facoltà di Medicina e Chirurgia dell'Università degli Studi di Milano, ma in seguito si è trasferito all'Accademia di Brera per studiare pittura, diplomandosi nel 1949.Poi ha studiato scenografia nel 1953 presso l'Accademia di belle arti di Brera. Inizia però da autodidatta l'attività di igraphic designer, ispirandosi ad Antonio Boggeri, Max Huber, Albe Steiner e Bruno Munari.Riesce ad ottenere a partire dai primi anni cinquanta importanti commissioni da aziende come Rai, La Rinascente, Roche, Honeywell, Standa, Fiat ed Electa.
                         A partire dagli anni sessanta lavora in qualità di art director per riviste quali ad esempio Popular Photography Italia, Fototeca, Sci nautico e Interni. Disegna le copertine per I dischi del sole.
@@ -46,33 +46,33 @@
         <div class="grid">
             
             <div class="card">
-                <a href="../progetti/lliprandi1.html"> <img src="../immagini/lliprandi/lliprandi1.jpeg" alt=""> </a>
-                <p> <strong>Arflex</strong><br>Giancarlo Lliprandi, 1970 <br>Poster </p> 
+                <a href="../progetti/iliprandi1.html"> <img src="../immagini/iliprandi/iliprandi1.jpeg" alt=""> </a>
+                <p> <strong>Arflex</strong><br>Giancarlo Iliprandi, 1970 <br>Poster </p> 
             </div>
 
             <div class="card">
-                <a href="../progetti/lliprandi2.html"> <img src="../immagini/lliprandi/lliprandi2.jpg" alt=""> </a>
-                <p> <strong>RB cucine</strong><br>Giancarlo Lliprandi, 1969 <br>Poster </p> 
+                <a href="../progetti/iliprandi2.html"> <img src="../immagini/iliprandi/iliprandi2.jpg" alt=""> </a>
+                <p> <strong>RB cucine</strong><br>Giancarlo Iliprandi, 1969 <br>Poster </p> 
             </div>
 
             <div class="card">
-                <a href="../progetti/lliprandi3.html"> <img src="../immagini/lliprandi/lliprandi3.jpg" alt=""> </a>
-                <p> <strong>Basta una pillola </strong><br>Giancarlo Lliprandi, 1967 <br>Poster  </p>
+                <a href="../progetti/iliprandi3.html"> <img src="../immagini/iliprandi/iliprandi3.jpg" alt=""> </a>
+                <p> <strong>Basta una pillola </strong><br>Giancarlo Iliprandi, 1967 <br>Poster  </p>
             </div>
 
             <div class="card">
-                <a href="../progetti/lliprandi4.html"> <img src="../immagini/lliprandi/lliprandi4.png" alt=""> </a>
-                <p> <strong>No alla violenza</strong><br>Giancarlo Lliprandi, 1975 <br>Poster</p>
+                <a href="../progetti/iliprandi4.html"> <img src="../immagini/iliprandi/iliprandi4.png" alt=""> </a>
+                <p> <strong>No alla violenza</strong><br>Giancarlo Iliprandi, 1975 <br>Poster</p>
             </div>
 
             <div class="card">
-                <a href="../progetti/lliprandi5.html"> <img src="../immagini/lliprandi/lliprandi5.jpg" alt=""> </a>
-                <p> <strong>La rinascente</strong><br>Giancarlo Lliprandi, 1964 <br>Poster </p>
+                <a href="../progetti/iliprandi5.html"> <img src="../immagini/iliprandi/iliprandi5.jpg" alt=""> </a>
+                <p> <strong>La rinascente</strong><br>Giancarlo Iliprandi, 1964 <br>Poster </p>
             </div>
 
             <div class="card">
-                <a href="../progetti/lliprandi6.html"> <img src="../immagini/lliprandi/lliprandi6.jpg" alt=""> </a>
-                <p> <strong>Photograpy italiana </strong><br>Giancarlo Lliprandi, 1970 <br>Copertina</p>
+                <a href="../progetti/iliprandi6.html"> <img src="../immagini/iliprandi/iliprandi6.jpg" alt=""> </a>
+                <p> <strong>Photograpy italiana </strong><br>Giancarlo Iliprandi, 1970 <br>Copertina</p>
             </div>
         </div>
     </section>
