--- a/progetti/iliprandi3.html
+++ b/progetti/iliprandi3.html
@@ -34,8 +34,8 @@
     
     
         <section class="progetto">
-            <img src="../immagini/lliprandi/lliprandi3.jpg" alt="">
-            <p>Giancarlo Lliprandi, 1969 <br>Poster</p>
+            <img src="../immagini/iliprandi/iliprandi3.jpg" alt="">
+            <p>Giancarlo Iliprandi, 1969 <br>Poster</p>
         </section>
    
     <!-- altri progetti-->
@@ -43,28 +43,28 @@
         <h2>Altri Progetti</h2>
         <div class="grid">
             <div class="card">
-                <a href="lliprandi1.html"> <img src="../immagini/lliprandi/lliprandi1.jpeg" alt=""> </a>
-                <p> <strong>Arflex</strong><br>Giancarlo Lliprandi, 1970 <br>Poster </p>
+                <a href="iliprandi1.html"> <img src="../immagini/iliprandi/iliprandi1.jpeg" alt=""> </a>
+                <p> <strong>Arflex</strong><br>Giancarlo Iliprandi, 1970 <br>Poster </p>
             </div>
 
             <div class="card">
-                <a href="lliprandi2.html"> <img src="../immagini/lliprandi/lliprandi2.jpg" alt=""> </a>
-                <p> <strong>RB cucine</strong><br>Giancarlo Lliprandi, 1969 <br>Poster </p> 
+                <a href="iliprandi2.html"> <img src="../immagini/iliprandi/iliprandi2.jpg" alt=""> </a>
+                <p> <strong>RB cucine</strong><br>Giancarlo Iliprandi, 1969 <br>Poster </p> 
             </div>
 
             <div class="card">
-                <a href="lliprandi4.html"> <img src="../immagini/lliprandi/lliprandi4.png" alt=""> </a>
-                <p> <strong>No alla violenza</strong><br>iancarlo Lliprandi, 1975 <br>Poster</p>
+                <a href="iliprandi4.html"> <img src="../immagini/iliprandi/iliprandi4.png" alt=""> </a>
+                <p> <strong>No alla violenza</strong><br>Giancarlo Iliprandi, 1975 <br>Poster</p>
             </div>
 
             <div class="card">
-                <a href="lliprandi5.html"> <img src="../immagini/lliprandi/lliprandi5.jpg" alt=""> </a>
-                <p> <strong>La rinascente</strong><br>Giancarlo Lliprandi, 1964 <br>Poster </p>
+                <a href="iliprandi5.html"> <img src="../immagini/iliprandi/iliprandi5.jpg" alt=""> </a>
+                <p> <strong>La rinascente</strong><br>Giancarlo Iliprandi, 1964 <br>Poster </p>
             </div>
 
             <div class="card">
-                <a href="lliprandi6.html"> <img src="../immagini/lliprandi/lliprandi6.jpg" alt=""> </a>
-                <p> <strong>Photograpy italiana </strong><br>Giancarlo Lliprandi, 1970 <br>Copertina</p>
+                <a href="iliprandi6.html"> <img src="../immagini/iliprandi/iliprandi6.jpg" alt=""> </a>
+                <p> <strong>Photograpy italiana </strong><br>Giancarlo Iliprandi, 1970 <br>Copertina</p>
             </div>
 
 
