--- a/progetti/iliprandi4.html
+++ b/progetti/iliprandi4.html
@@ -39,8 +39,8 @@
     
     
         <section class="progetto">
-            <img src="../immagini/lliprandi/lliprandi4.png" alt="">
-            <p>Giancarlo Lliprandi, 1975 <br>Poster</p>
+            <img src="../immagini/iliprandi/iliprandi4.png" alt="">
+            <p>Giancarlo Iliprandi, 1975 <br>Poster</p>
         </section>
    
     <!-- altri progetti-->
@@ -48,28 +48,28 @@
         <h2>Altri Progetti</h2>
         <div class="grid">
             <div class="card">
-                <a href="lliprandi1.html"> <img src="../immagini/lliprandi/lliprandi1.jpeg" alt=""> </a>
-                <p> <strong>Arflex</strong><br>Giancarlo Lliprandi, 1970 <br>Poster </p>
+                <a href="iliprandi1.html"> <img src="../immagini/iliprandi/iliprandi1.jpeg" alt=""> </a>
+                <p> <strong>Arflex</strong><br>Giancarlo Iliprandi, 1970 <br>Poster </p>
             </div>
 
             <div class="card">
-                <a href="lliprandi2.html"> <img src="../immagini/lliprandi/lliprandi2.jpg" alt=""> </a>
-                <p> <strong>RB cucine</strong><br>Giancarlo Lliprandi, 1969 <br>Poster </p> 
+                <a href="iliprandi2.html"> <img src="../immagini/iliprandi/iliprandi2.jpg" alt=""> </a>
+                <p> <strong>RB cucine</strong><br>Giancarlo Iliprandi, 1969 <br>Poster </p> 
             </div>
 
             <div class="card">
-                <a href="lliprandi3.html"> <img src="../immagini/lliprandi/lliprandi3.jpg" alt=""> </a>
-                <p> <strong>Basta una pillola </strong><br>Giancarlo Lliprandi, 1967 <br>Poster  </p>
+                <a href="iliprandi3.html"> <img src="../immagini/iliprandi/iliprandi3.jpg" alt=""> </a>
+                <p> <strong>Basta una pillola </strong><br>Giancarlo Iliprandi, 1967 <br>Poster  </p>
             </div>
 
             <div class="card">
-                <a href="lliprandi5.html"> <img src="../immagini/lliprandi/lliprandi5.jpg" alt=""> </a>
-                <p> <strong>La rinascente</strong><br>Giancarlo Lliprandi, 1964 <br>Poster </p>
+                <a href="iliprandi5.html"> <img src="../immagini/iliprandi/iliprandi5.jpg" alt=""> </a>
+                <p> <strong>La rinascente</strong><br>Giancarlo Iliprandi, 1964 <br>Poster </p>
             </div>
 
             <div class="card">
-                <a href="lliprandi6.html"> <img src="../immagini/lliprandi/lliprandi6.jpg" alt=""> </a>
-                <p> <strong>Photograpy italiana </strong><br>Giancarlo Lliprandi, 1970 <br>Copertina</p>
+                <a href="iliprandi6.html"> <img src="../immagini/iliprandi/iliprandi6.jpg" alt=""> </a>
+                <p> <strong>Photograpy italiana </strong><br>Giancarlo Iliprandi, 1970 <br>Copertina</p>
             </div>
 
 
