--- a/designers.html
+++ b/designers.html
@@ -105,7 +105,7 @@
         </div>
 
         <div class="card1">
-            <a href="designers/lliprandi.html"> <img src="immagini/designer/ilimprandi.png" alt=""> </a>
+            <a href="designers/iliprandi.html"> <img src="immagini/designer/ilimprandi.png" alt=""> </a>
             <h3>Giancarlo Iliprandi</h3>
         </div>
 
