--- a/projects.html
+++ b/projects.html
@@ -85,22 +85,22 @@
         </div>
 
         <div class="categoria categoria-1 card">
-            <a href="progetti/munari3.html"> <img src="immagini/lliprandi/lliprandi6.jpg" alt=""> </a>
+            <a href="progetti/iliprandi6.html"> <img src="immagini/iliprandi/iliprandi6.jpg" alt=""> </a>
             <p> <strong>Photograpy italiana</strong><br>Giancarlo Lliprandi, 1970 <br>Copertina</p> 
         </div>
 
         <div class="categoria categoria-1 card">
-            <a href="../progetti/noorda6.html"> <img src="../immagini/noorda/noorda6.jpeg" alt=""> </a>
+            <a href="progetti/noorda6.html"> <img src="immagini/noorda/noorda6.jpeg" alt=""> </a>
             <p> <strong>Lisi</strong><br>Bob Noorda, 1967 <br>Copertina</p>
         </div>
 
         <div class="categoria categoria-1 card">
-            <a href="../progetti/mari1.html"> <img src="../immagini/mari/mari1.png" alt=""> </a>
+            <a href="progetti/mari1.html"> <img src="immagini/mari/mari1.png" alt=""> </a>
             <p> <strong>Arte Programmata</strong><br>Enzo Mari, 1962 <br>Copertina </p>
         </div>
 
         <div class="categoria categoria-1 card">
-            <a href="../progetti/monguzzi4.html"> <img src="../immagini/monguzzi/monguzzi4.png" alt=""> </a>
+            <a href="progetti/monguzzi4.html"> <img src="immagini/monguzzi/monguzzi4.png" alt=""> </a>
             <p> <strong>Alice edizioni</strong><br>Bruno Monguzzi, 1987 <br>Libro </p>
         </div>
 
@@ -218,28 +218,28 @@
         </div>
 
         <div class="categoria categoria-3 card">
-            <a href="progetti/munari3.html"> <img src="immagini/lliprandi/lliprandi1.jpeg" alt=""> </a>
-            <p> <strong>Arflex</strong><br>Giancarlo Lliprandi, 1970 <br>Poster </p> 
+            <a href="progetti/iliprandi1.html"> <img src="immagini/iliprandi/iliprandi1.jpeg" alt=""> </a>
+            <p> <strong>Arflex</strong><br>Giancarlo Iliprandi, 1970 <br>Poster </p> 
         </div>
 
         <div class="categoria categoria-3 card">
-            <a href="progetti/munari3.html"> <img src="immagini/lliprandi/lliprandi2.jpg" alt=""> </a>
-            <p> <strong>RB cucine</strong><br>Giancarlo Lliprandi, 1969 <br>Poster </p> 
+            <a href="progetti/iliprandi2.html"> <img src="immagini/iliprandi/iliprandi2.jpg" alt=""> </a>
+            <p> <strong>RB cucine</strong><br>Giancarlo Iliprandi, 1969 <br>Poster </p> 
         </div>
 
         <div class="categoria categoria-3 card">
-            <a href="progetti/munari3.html"> <img src="immagini/lliprandi/lliprandi3.jpg" alt=""> </a>
-            <p> <strong>Basta una pillola</strong><br>Giancarlo Lliprandi, 1967 <br>Poster </p> 
+            <a href="progetti/iliprandi3.html"> <img src="immagini/iliprandi/iliprandi3.jpg" alt=""> </a>
+            <p> <strong>Basta una pillola</strong><br>Giancarlo Iliprandi, 1967 <br>Poster </p> 
         </div>
 
         <div class="categoria categoria-3 card">
-            <a href="progetti/munari3.html"> <img src="immagini/lliprandi/lliprandi4.png" alt=""> </a>
+            <a href="progetti/iliprandi4.html"> <img src="immagini/iliprandi/iliprandi4.png" alt=""> </a>
             <p> <strong>No alla violenza</strong><br>Giancarlo Lliprandi, 1975 <br>Poster </p> 
         </div>
 
         <div class="categoria categoria-3 card">
-            <a href="progetti/munari3.html"> <img src="immagini/lliprandi/lliprandi5.jpg" alt=""> </a>
-            <p> <strong>La rinascente</strong><br>Giancarlo Lliprandi, 1964 <br>Poster </p> 
+            <a href="progetti/iliprandi5.html"> <img src="immagini/iliprandi/iliprandi5.jpg" alt=""> </a>
+            <p> <strong>La rinascente</strong><br>Giancarlo Iliprandi, 1964 <br>Poster </p> 
         </div>
 
         <div class="categoria categoria-3 card">
