--- a/index.html
+++ b/index.html
@@ -12,8 +12,17 @@
     <!-- Logo e Nav principale -->
    <header>
         <h1 class="logo"><a href="index.html">Designer Studio Boggeri</a></h1>
+
+    </div>
+    <input class="checkbox" type="checkbox" name="" id="" />
+        <div class="hamburger-lines">
+          <span class="line line1"></span>
+          <span class="line line2"></span>
+          <span class="line line3"></span>
+        </div>
+
         <nav>
-            <ul>
+            <ul id="menu">
                 <li><a href="studio.html">Studio</a></li>
                 <li><a href="designers.html">Designer</a></li>
                 <li><a href="projects.html">Progetti</a></li>
