--- a/designers.html
+++ b/designers.html
@@ -109,7 +109,7 @@
         </div>
 
         <div class="card1">
-            <a href=""> <img src="immagini/designer/sambonet.png" alt=""> </a>
+            <a href="designers/sambonet.html"> <img src="immagini/designer/sambonet.png" alt=""> </a>
             <h3>Roberto Sambonet</h3>
         </div>
 
