--- a/progetti/mari1.html
+++ b/progetti/mari1.html
@@ -39,7 +39,7 @@
     
         <section class="progetto">
             <img src="../immagini/mari/mari1.webp" alt="">
-            <p>Bob Noorda, 1963 <br>Marchio</p>
+            <p>Enzo Mari, 1962 <br>Copertina</p>
         </section>
    
     <!-- altri progetti-->
@@ -48,7 +48,22 @@
         <div class="grid">
             <div class="card">
                 <a href="mari2.html"> <img src="../immagini/mari/mari2.webp" alt=""> </a>
-                <p> <strong>Agip</strong><br>Bob Noorda, 1972 <br>Marchio </p>
+                <p> <strong>Danese</strong><br>Enzo Mari, 1957 <br>Manifesto</p>
+            </div>
+
+            <div class="card">
+                <a href="mari3.html"> <img src="../immagini/mari/mari3.webp" alt=""> </a>
+                <p> <strong>Sedia 1:1</strong><br>Enzo Mari, 2004 <br>Prodotto</p>
+            </div>
+
+            <div class="card">
+                <a href="mari4.html"> <img src="../immagini/mari/mari4.jpg" alt=""> </a>
+                <p> <strong>16 animali</strong><br>Enzo Mari, 1957 <br>Prodotto</p>
+            </div>
+
+            <div class="card">
+                <a href="mari5.html"> <img src="../immagini/mari/mari5.jpeg" alt=""> </a>
+                <p> <strong>Timor</strong><br>Enzo Mari, 1971 <br>Prodotto</p>
             </div>
 
         </div>
