--- a/progetti/mari3.html
+++ b/progetti/mari3.html
@@ -32,14 +32,14 @@
 
 <main>
     <section class="testo-progetto">
-    <h2>Danese</h2>
-    <p>I poster di "La Casa Abitata" presentavano immagini stilizzate di oggetti domestici comuni. Le immagini erano ridotte alle loro forme essenziali, con linee pulite e una palette di colori limitata, spesso in bianco e nero. Mari ha usato la sintesi grafica per rappresentare l'essenza degli oggetti e trasmettere un senso di familiarità e immediatezza.</p>
+    <h2>Sesia 1:1</h2>
+    <p>Questa sedia è diventata un'icona del design contemporaneo. Semplice ed essenziale, è realizzata in legno con un'attenzione particolare ai dettagli funzionali e strutturali.</p>
     </section>
     
     
         <section class="progetto">
-            <img src="../immagini/mari/mari2.webp" alt="">
-            <p>Enzo Mari, 1957<br>Manifesto</p>
+            <img src="../immagini/mari/mari3.webp" alt="">
+            <p>Enzo Mari, 2004<br>Manifesto</p>
         </section>
    
     <!-- altri progetti-->
@@ -52,8 +52,8 @@
             </div>
 
             <div class="card">
-                <a href="mari3.html"> <img src="../immagini/mari/mari3.webp" alt=""> </a>
-                <p> <strong>Sedia 1:1</strong><br>Enzo Mari, 2004 <br>Prodotto</p>
+                <a href="mari2.html"> <img src="../immagini/mari/mari2.webp" alt=""> </a>
+                <p> <strong>Danese</strong><br>Enzo Mari, 1957 <br>Prodotto</p>
             </div>
 
             <div class="card">
