--- a/progetti/mari5.html
+++ b/progetti/mari5.html
@@ -32,14 +32,14 @@
 
 <main>
     <section class="testo-progetto">
-    <h2>Danese</h2>
-    <p>I poster di "La Casa Abitata" presentavano immagini stilizzate di oggetti domestici comuni. Le immagini erano ridotte alle loro forme essenziali, con linee pulite e una palette di colori limitata, spesso in bianco e nero. Mari ha usato la sintesi grafica per rappresentare l'essenza degli oggetti e trasmettere un senso di familiarità e immediatezza.</p>
+    <h2>Timor</h2>
+    <p>Questo orologio da parete è un esempio di design essenziale e funzionale. Con il suo carattere minimale, l'orologio "Timor" si concentra sull'indicazione precisa del tempo.</p>
     </section>
     
     
         <section class="progetto">
-            <img src="../immagini/mari/mari2.webp" alt="">
-            <p>Enzo Mari, 1957<br>Manifesto</p>
+            <img src="../immagini/mari/mari5.jpeg" alt="">
+            <p>Enzo Mari, 1957<br>Prodotto</p>
         </section>
    
     <!-- altri progetti-->
@@ -52,6 +52,11 @@
             </div>
 
             <div class="card">
+                <a href="mari2.html"> <img src="../immagini/mari/mari2.webp" alt=""> </a>
+                <p> <strong>Danese</strong><br>Enzo Mari, 1957 <br>Prodotto</p>
+            </div>
+
+            <div class="card">
                 <a href="mari3.html"> <img src="../immagini/mari/mari3.webp" alt=""> </a>
                 <p> <strong>Sedia 1:1</strong><br>Enzo Mari, 2004 <br>Prodotto</p>
             </div>
@@ -59,11 +64,6 @@
             <div class="card">
                 <a href="mari4.html"> <img src="../immagini/mari/mari4.jpg" alt=""> </a>
                 <p> <strong>16 animali</strong><br>Enzo Mari, 1957 <br>Prodotto</p>
-            </div>
-
-            <div class="card">
-                <a href="mari5.html"> <img src="../immagini/mari/mari5.jpeg" alt=""> </a>
-                <p> <strong>Timor</strong><br>Enzo Mari, 1971 <br>Prodotto</p>
             </div>
 
         </div>
