--- a/progetti/nizzoli2.html
+++ b/progetti/nizzoli2.html
@@ -33,25 +33,29 @@
 <main>
     <section class="testo-progetto">
     <h2>Bernocchi</h2> <!-- MODIFICARE -->
-    <p>
-        Marcello Nizzoli ha progettato un celebre poster pubblicitario per l'azienda tessile italiana Bernocchi. Questo poster, noto come "Bernocchi", è stato creato nel 1924 ed è considerato un'icona del design grafico italiano dell'epoca.
-        Il poster "Bernocchi" di Nizzoli rappresenta una figura femminile elegante che indossa un abito realizzato con tessuti prodotti dall'azienda. La figura è ritratta in modo stilizzato e dinamico, con linee fluide che esprimono movimento e grazia. Il poster utilizza colori vivaci e contrastanti per attirare l'attenzione, con tonalità di blu, rosso e bianco predominanti.</p> <!-- MODIFICARE -->
+    <p>I poster di Nizzoli per Campari sono caratterizzati da uno stile distintivo e vivace. Utilizzava colori audaci e vibranti, spesso con un forte uso del rosso, il colore iconico associato al marchio Campari. I suoi design erano accattivanti e giocosi, con una combinazione di elementi grafici e testi che catturavano l'attenzione del pubblico.</p> <!-- MODIFICARE -->
     </section>
     
     
         <section class="progetto">
             <img src="../immagini/nizzoli/nizzoli2.webp" alt=""> <!-- MODIFICARE -->
-            <p> <strong>Bernocchi</strong><br>Marcello Nizzoli, 1930 <br>Poster </p> <!-- MODIFICARE -->
+            <p>Marcello Nizzoli, 1930<br>Manifesto</p> <!-- MODIFICARE -->
         </section>
    
     <!-- altri progetti-->
     <section class="progetti">
         <h2>Altri Progetti</h2>
         <div class="grid">
+
             <div class="card">
-                <a href="nizzoli1.html"> <img src="../immagini/nizzoli/nizzoli1.webp" alt=""> </a>
-                <p> <strong>Campari</strong><br>Marcello Nizzoli, 1927 <br>Poster </p>
+                <a href="nizzoli1.html"> <img src="../immagini/nizzoli/nizzoli1.webp" alt=""> </a> <!-- MODIFICARE -->
+                <p> <strong>Campari</strong><br>Marcello Nizzoli, 1927 <br>Poster</p> <!-- MODIFICARE -->
             </div>
+            <div class="card">
+                <a href="nizzoli3.html"> <img src="../immagini/nizzoli/nizzoli3.jpeg" alt=""> </a> <!-- MODIFICARE -->
+                <p> <strong>Lettera 22</strong><br>Marcello Nizzoli, 1950 <br>Prodotto</p> <!-- MODIFICARE -->
+            </div>
+
 
         </div>
     </section>
