--- a/progetti/nizzoli3.html
+++ b/progetti/nizzoli3.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Almanacco Anti-Letterario di Bompiani</title>
+    <title>Stile Olivetti</title>
 </head>
 <body>
      <!-- Logo e Nav principale -->
    <header>
-    <h1 class="logo"><a href="../index.html">Designer Studio Boggeri</a></h1>
+    <h1 class="logo"><a href="../index.html">Designers Studio Boggeri</a></h1>
 
     <!--hamburger menù-->
     <input class="checkbox" type="checkbox" name="" id="" />
@@ -32,39 +32,32 @@
 
 <main>
     <section class="testo-progetto">
-    <h2>Danese</h2>
-    <p>I poster di "La Casa Abitata" presentavano immagini stilizzate di oggetti domestici comuni. Le immagini erano ridotte alle loro forme essenziali, con linee pulite e una palette di colori limitata, spesso in bianco e nero. Mari ha usato la sintesi grafica per rappresentare l'essenza degli oggetti e trasmettere un senso di familiarità e immediatezza.</p>
+    <h2>Lettera 22</h2> <!-- MODIFICARE -->
+    <p>Questo modello era noto per il suo design elegante e funzionale, che combinava linee pulite, una tastiera ergonomica e una struttura compatta.
+       La Lettera 22 presentava una scocca in alluminio pressofuso e un sistema di scrittura preciso e affidabile. Era una macchina da scrivere portatile che offriva una soluzione pratica per il lavoro d'ufficio e la scrittura professionale.
+       Il design della Lettera 22 era caratterizzato da una combinazione di estetica e funzionalità. Nizzoli si concentrò sulla semplicità e sull'ergonomia, creando una macchina da scrivere che fosse facile da usare e piacevole da guardare.</p> <!-- MODIFICARE -->
     </section>
     
     
         <section class="progetto">
-            <img src="../immagini/mari/mari2.webp" alt="">
-            <p>Enzo Mari, 1957<br>Manifesto</p>
+            <img src="../immagini/nizzoli/nizzoli3.jpeg" alt=""> <!-- MODIFICARE -->
+            <p>Marcello Nizzoli, 1930<br>Manifesto</p> <!-- MODIFICARE -->
         </section>
    
     <!-- altri progetti-->
     <section class="progetti">
         <h2>Altri Progetti</h2>
         <div class="grid">
-            <div class="card">
-                <a href="mari1.html"> <img src="../immagini/mari/mari1.webp" alt=""> </a>
-                <p> <strong>Arte programmata</strong><br>Enzo Mari, 1962 <br>Copertina</p>
-            </div>
 
             <div class="card">
-                <a href="mari3.html"> <img src="../immagini/mari/mari3.webp" alt=""> </a>
-                <p> <strong>Sedia 1:1</strong><br>Enzo Mari, 2004 <br>Prodotto</p>
+                <a href="nizzoli1.html"> <img src="../immagini/nizzoli/nizzoli1.webp" alt=""> </a> <!-- MODIFICARE -->
+                <p> <strong>Campari</strong><br>Marcello Nizzoli, 1927 <br>Poster</p> <!-- MODIFICARE -->
+            </div>
+            <div class="card">
+                <a href="nizzoli2.html"> <img src="../immagini/nizzoli/nizzoli2.webp" alt=""> </a> <!-- MODIFICARE -->
+                <p> <strong>Bernocchi</strong><br>Marcello Nizzoli, 1930 <br>Manifesto</p> <!-- MODIFICARE -->
             </div>
 
-            <div class="card">
-                <a href="mari4.html"> <img src="../immagini/mari/mari4.jpg" alt=""> </a>
-                <p> <strong>16 animali</strong><br>Enzo Mari, 1957 <br>Prodotto</p>
-            </div>
-
-            <div class="card">
-                <a href="mari5.html"> <img src="../immagini/mari/mari5.jpeg" alt=""> </a>
-                <p> <strong>Timor</strong><br>Enzo Mari, 1971 <br>Prodotto</p>
-            </div>
 
         </div>
     </section>
@@ -72,7 +65,7 @@
 
 
 <footer>
-    <p class="logo"><a href="../index.html">Designer Studio Boggeri</a></p>
+    <p class="logo"><a href="../index.html">Designers Studio Boggeri</a></p>
     <nav>
         <ul>
             <li><a href="../studio.html">Studio</a></li>
