--- a/projects.html
+++ b/projects.html
@@ -420,6 +420,43 @@
           <p> <strong>Olivetti MP\</strong><br>Xanti Schawisnky, 1932 <br>Poster </p>
       </div>
 
+       <!--Prodotti-->
+
+       <div class="foto foto3">
+        <a href="../progetti/sambonet1.html"> <img src="../immagini/sambonet/sambonet1.jpeg" alt=""> </a>
+        <p> <strong>Posate Girotondo</strong><br>Roberto Sambonet, 1989 <br>Prodotto</p>
+    </div>
+
+    <div class="foto foto3">
+        <a href="../progetti/sambonet2.html"> <img src="../immagini/sambonet/sambonet2.jpeg" alt=""> </a>
+        <p> <strong>Lampada Tizio</strong><br>Roberto Sambonet, 1972 <br>Prodotto </p>
+    </div>
+
+    <div class="foto foto3">
+        <a href="../progetti/sambonet3.html"> <img src="../immagini/sambonet/sambonet3.jpeg" alt=""> </a>
+        <p> <strong>Pesciera ovale</strong><br>Roberto Sambonet, 1957 <br>Prodotto </p>
+    </div>
+
+    <div class="foto foto3">
+        <a href="../progetti/sambonet4.html"> <img src="../immagini/sambonet/sambonet4.webp" alt=""> </a>
+        <p> <strong>Pentole</strong><br>Roberto Sambonet, 1965 <br>Prodotto</p>
+    </div>
+
+    <div class="foto foto3">
+        <a href="../progetti/mari3.html"> <img src="../immagini/mari/mari3.webp" alt=""> </a>
+        <p> <strong>Sedia 1:1</strong><br>Enzo Mari, 2004 <br>Prodotto </p>
+    </div>
+
+    <div class="foto foto3">
+        <a href="../progetti/mari4.html"> <img src="../immagini/mari/mari4.jpg" alt=""> </a>
+        <p> <strong>16 animali</strong><br>Enzo Mari, 1957 <br>Prodotto</p>
+    </div>
+
+    <div class="foto foto3">
+        <a href="../progetti/mari5.html"> <img src="../immagini/mari/mari5.jpeg" alt=""> </a>
+        <p> <strong>Timor</strong><br>Enzo Mari, 1971 <br>Prodotto</p>
+    </div>
+
       <!--Marchi-->
       <div class="foto foto4">
         <a href="progetti/steiner6.html"> <img src="immagini/steiner/ORO.webp" alt=""> </a>
