--- a/designers/mari.html
+++ b/designers/mari.html
@@ -60,6 +60,21 @@
                 <p> <strong>Danese</strong><br>Enzo Mari, 1957 <br>Poster </p>
             </div>
 
+            <div class="card">
+                <a href="../progetti/mari3.html"> <img src="../immagini/mari/mari3.webp" alt=""> </a>
+                <p> <strong>Sedia 1:1</strong><br>Enzo Mari, 2004 <br>Prodotto </p>
+            </div>
+
+            <div class="card">
+                <a href="../progetti/mari4.html"> <img src="../immagini/mari/mari4.jpg" alt=""> </a>
+                <p> <strong>16 animali</strong><br>Enzo Mari, 1957 <br>Prodotto</p>
+            </div>
+
+            <div class="card">
+                <a href="../progetti/mari5.html"> <img src="../immagini/mari/mari5.jpeg" alt=""> </a>
+                <p> <strong>Timor</strong><br>Enzo Mari, 1971 <br>Prodotto</p>
+            </div>
+
         </div>
     </section>
     </main>
