--- a/designers/nizzoli.html
+++ b/designers/nizzoli.html
@@ -55,15 +55,20 @@
         <div class="grid">
             
             <div class="card">
-                <a href="../progetti/nizzoli1.html"> <img src="../immagini/nizzoli/nizzoli2.webp" alt=""> </a>
+                <a href="../progetti/nizzoli1.html"> <img src="../immagini/nizzoli/nizzoli1.webp" alt=""> </a>
                 <p> <strong>Campari</strong><br>Marcello Nizzoli, 1927 <br>Poster </p>
             </div>
 
             <div class="card">
-                <a href="../progetti/nizzoli2.html"> <img src="../immagini/nizzoli/nizzoli1.webp" alt=""> </a>
+                <a href="../progetti/nizzoli2.html"> <img src="../immagini/nizzoli/nizzoli2.webp" alt=""> </a>
                 <p> <strong>Bernocchi</strong><br>Marcello Nizzoli, 1930 <br>Poster </p>
             </div>
 
+            <div class="card">
+                <a href="../progetti/nizzoli3.html"> <img src="../immagini/nizzoli/nizzoli3.jpeg" alt=""> </a>
+                <p> <strong>Lettera 22</strong><br>Marcello Nizzoli, 1950 <br>Prodotto</p>
+            </div>
+            
         </div>
     </section>
     </main>
