--- a/designers/sambonet.html
+++ b/designers/sambonet.html
@@ -54,22 +54,22 @@
         <div class="grid">
             
             <div class="card">
-                <a href="../progetti/"> <img src="../immagini/sambonet/sambonet1.webp" alt=""> </a>
+                <a href="../progetti/sambonet1.html"> <img src="../immagini/sambonet/sambonet1.jpeg" alt=""> </a>
                 <p> <strong>Posate Girotondo</strong><br>Roberto Sambonet, 1989 <br>Prodotto</p>
             </div>
 
             <div class="card">
-                <a href="../progetti/noorda2.html"> <img src="../immagini/sambonet/sambonet2.webp" alt=""> </a>
+                <a href="../progetti/sambonet2.html"> <img src="../immagini/sambonet/sambonet2.jpeg" alt=""> </a>
                 <p> <strong>Lampada Tizio</strong><br>Roberto Sambonet, 1972 <br>Prodotto </p>
             </div>
 
             <div class="card">
-                <a href="../progetti/noorda3.html"> <img src="../immagini/sambonet/sambonet3.webp" alt=""> </a>
+                <a href="../progetti/sambonet3.html"> <img src="../immagini/sambonet/sambonet3.jpeg" alt=""> </a>
                 <p> <strong>Pesciera ovale</strong><br>Roberto Sambonet, 1957 <br>Prodotto </p>
             </div>
 
             <div class="card">
-                <a href="../progetti/noorda4.html"> <img src="../immagini/sambonet/sambonet4.webp" alt=""> </a>
+                <a href="../progetti/sambonet4.html"> <img src="../immagini/sambonet/sambonet4.webp" alt=""> </a>
                 <p> <strong>Pentole</strong><br>Roberto Sambonet, 1965 <br>Prodotto</p>
             </div>
 
