--- a/progetti/nizzoli1.html
+++ b/progetti/nizzoli1.html
@@ -33,24 +33,29 @@
 <main>
     <section class="testo-progetto">
     <h2>Campari</h2> <!-- MODIFICARE -->
-    <p>
-        I poster di Nizzoli per Campari sono caratterizzati da uno stile distintivo e vivace. Utilizzava colori audaci e vibranti, spesso con un forte uso del rosso, il colore iconico associato al marchio Campari. I suoi design erano accattivanti e giocosi, con una combinazione di elementi grafici e testi che catturavano l'attenzione del pubblico.</p> <!-- MODIFICARE -->
+    <p>I poster di Nizzoli per Campari sono caratterizzati da uno stile distintivo e vivace. Utilizzava colori audaci e vibranti, spesso con un forte uso del rosso, il colore iconico associato al marchio Campari. I suoi design erano accattivanti e giocosi, con una combinazione di elementi grafici e testi che catturavano l'attenzione del pubblico.</p> <!-- MODIFICARE -->
     </section>
     
     
         <section class="progetto">
             <img src="../immagini/nizzoli/nizzoli1.webp" alt=""> <!-- MODIFICARE -->
-            <p> <strong>Campari</strong><br>Marcello Nizzoli, 1927 <br>Poster </p> <!-- MODIFICARE -->
+            <p>Marcello Nizzoli, 1927<br>Manifesto</p> <!-- MODIFICARE -->
         </section>
    
     <!-- altri progetti-->
     <section class="progetti">
         <h2>Altri Progetti</h2>
         <div class="grid">
+
             <div class="card">
-                <a href="nizzoli2.html"> <img src="../immagini/nizzoli/nizzoli2.webp" alt=""> </a>
-                <p> <strong>Bernocchi</strong><br>Marcello Nizzoli, 1930 <br>Poster </p>
+                <a href="nizzoli2.html"> <img src="../immagini/nizzoli/nizzoli2.webp" alt=""> </a> <!-- MODIFICARE -->
+                <p> <strong>Bernocchi</strong><br>Marcello Nizzoli, 1930 <br>Poster </p> <!-- MODIFICARE -->
             </div>
+            <div class="card">
+                <a href="nizzoli3.html"> <img src="../immagini/nizzoli/nizzoli3.jpeg" alt=""> </a> <!-- MODIFICARE -->
+                <p> <strong>Lettera 22</strong><br>Marcello Nizzoli, 1950 <br>Prodotto</p> <!-- MODIFICARE -->
+            </div>
+
 
         </div>
     </section>
