--- a/progetti/sambonet2.html
+++ b/progetti/sambonet2.html
@@ -32,14 +32,14 @@
 
 <main>
     <section class="testo-progetto">
-    <h2>Danese</h2>
-    <p>I poster di "La Casa Abitata" presentavano immagini stilizzate di oggetti domestici comuni. Le immagini erano ridotte alle loro forme essenziali, con linee pulite e una palette di colori limitata, spesso in bianco e nero. Mari ha usato la sintesi grafica per rappresentare l'essenza degli oggetti e trasmettere un senso di familiarità e immediatezza.</p>
+    <h2> Lampada tizio</h2>
+    <p>La lampada da tavolo "Tizio" è diventata un'icona del design contemporaneo. Caratterizzata da un'innovativa sorgente luminosa a bassa tensione e da un sistema di contrappesi, la lampada offre una luce direzionale regolabile.</p>
     </section>
     
     
         <section class="progetto">
-            <img src="../immagini/mari/mari2.webp" alt="">
-            <p>Enzo Mari, 1957<br>Manifesto</p>
+            <img src="../immagini/sambonet/sambonet2.jpeg" alt="">
+            <p>Roberto Sambonet, 1972 <br>Prodotto</p>
         </section>
    
     <!-- altri progetti-->
@@ -47,23 +47,18 @@
         <h2>Altri Progetti</h2>
         <div class="grid">
             <div class="card">
-                <a href="mari1.html"> <img src="../immagini/mari/mari1.webp" alt=""> </a>
-                <p> <strong>Arte programmata</strong><br>Enzo Mari, 1962 <br>Copertina</p>
+                <a href="sambonet1.html"> <img src="../immagini/sambonet/sambonet1.jpeg" alt=""> </a>
+                <p> <strong>Posate girotondo</strong><br>Roberto Sambonet, 1989 <br>Prodotto</p>
             </div>
 
             <div class="card">
-                <a href="mari3.html"> <img src="../immagini/mari/mari3.webp" alt=""> </a>
-                <p> <strong>Sedia 1:1</strong><br>Enzo Mari, 2004 <br>Prodotto</p>
+                <a href="sambonet3.html"> <img src="../immagini/sambonet/sambonet3.jpeg" alt=""> </a>
+                <p> <strong>Pesciera ovale</strong><br>Roberto Sambonet, 1957 <br>Prodotto</p>
             </div>
 
             <div class="card">
-                <a href="mari4.html"> <img src="../immagini/mari/mari4.jpg" alt=""> </a>
-                <p> <strong>16 animali</strong><br>Enzo Mari, 1957 <br>Prodotto</p>
-            </div>
-
-            <div class="card">
-                <a href="mari5.html"> <img src="../immagini/mari/mari5.jpeg" alt=""> </a>
-                <p> <strong>Timor</strong><br>Enzo Mari, 1971 <br>Prodotto</p>
+                <a href="sambonet4.html"> <img src="../immagini/sambonet/sambonet4.webp" alt=""> </a>
+                <p> <strong>Pentole</strong><br>Roberto Sambonet, 1965 <br>Prodotto</p>
             </div>
 
         </div>
