--- a/progetti/sambonet3.html
+++ b/progetti/sambonet3.html
@@ -32,14 +32,16 @@
 
 <main>
     <section class="testo-progetto">
-    <h2>Danese</h2>
-    <p>I poster di "La Casa Abitata" presentavano immagini stilizzate di oggetti domestici comuni. Le immagini erano ridotte alle loro forme essenziali, con linee pulite e una palette di colori limitata, spesso in bianco e nero. Mari ha usato la sintesi grafica per rappresentare l'essenza degli oggetti e trasmettere un senso di familiarità e immediatezza.</p>
+    <h2> Pesciera ovale</h2>
+    <p>La pesciera ovale è realizzata in acciaio inossidabile di alta qualità ed è caratterizzata da una forma allungata e slanciata. Il design pulito e minimalista di Sambonet è evidente in questa creazione, che unisce estetica e funzionalità.
+        La pesciera ovale di Sambonet è stata progettata per consentire di presentare e servire il pesce in modo elegante. La forma ovale offre spazio sufficiente per disporre i vari tipi di pesce in modo attraente, mentre le sue linee sottili e rifinite donano un tocco di raffinatezza alla tavola.
+        Grazie alla sua popolarità e al suo design senza tempo, la pesciera ovale di Sambonet è diventata un pezzo di design classico. È apprezzata sia in ambito domestico che in contesti più formali come ristoranti e hotel di lusso.</p>
     </section>
     
     
         <section class="progetto">
-            <img src="../immagini/mari/mari2.webp" alt="">
-            <p>Enzo Mari, 1957<br>Manifesto</p>
+            <img src="../immagini/sambonet/sambonet3.jpeg" alt="">
+            <p>Roberto Sambonet, 1957 <br>Prodotto</p>
         </section>
    
     <!-- altri progetti-->
@@ -47,23 +49,18 @@
         <h2>Altri Progetti</h2>
         <div class="grid">
             <div class="card">
-                <a href="mari1.html"> <img src="../immagini/mari/mari1.webp" alt=""> </a>
-                <p> <strong>Arte programmata</strong><br>Enzo Mari, 1962 <br>Copertina</p>
+                <a href="sambonet1.html"> <img src="../immagini/sambonet/sambonet1.jpeg" alt=""> </a>
+                <p> <strong>Posate girotondo</strong><br>Roberto Sambonet, 1989 <br>Prodotto</p>
             </div>
 
             <div class="card">
-                <a href="mari3.html"> <img src="../immagini/mari/mari3.webp" alt=""> </a>
-                <p> <strong>Sedia 1:1</strong><br>Enzo Mari, 2004 <br>Prodotto</p>
+                <a href="sambonet2.html"> <img src="../immagini/sambonet/sambonet2.jpeg" alt=""> </a>
+                <p> <strong>Lamapada tizio</strong><br>Roberto Sambonet, 1972 <br>Prodotto</p>
             </div>
 
             <div class="card">
-                <a href="mari4.html"> <img src="../immagini/mari/mari4.jpg" alt=""> </a>
-                <p> <strong>16 animali</strong><br>Enzo Mari, 1957 <br>Prodotto</p>
-            </div>
-
-            <div class="card">
-                <a href="mari5.html"> <img src="../immagini/mari/mari5.jpeg" alt=""> </a>
-                <p> <strong>Timor</strong><br>Enzo Mari, 1971 <br>Prodotto</p>
+                <a href="sambonet4.html"> <img src="../immagini/sambonet/sambonet4.webp" alt=""> </a>
+                <p> <strong>Pentole</strong><br>Roberto Sambonet, 1965 <br>Prodotto</p>
             </div>
 
         </div>
