--- a/projects.html
+++ b/projects.html
@@ -457,6 +457,11 @@
         <p> <strong>Timor</strong><br>Enzo Mari, 1971 <br>Prodotto</p>
     </div>
 
+    <div class="foto foto3">
+        <a href="../progetti/nizzoli3.html"> <img src="../immagini/nizzoli/nizzoli3.jpeg" alt=""> </a>
+        <p> <strong>Lettera 22</strong><br>Marcello Nizzoli, 1950 <br>Prodotto</p>
+    </div>
+
       <!--Marchi-->
       <div class="foto foto4">
         <a href="progetti/steiner6.html"> <img src="immagini/steiner/ORO.webp" alt=""> </a>
